Uploaded image for project: 'ORC'
  1. ORC
  2. ORC-1160

[C++] RowReaderImpl::seekToRow() can't seek within a selected row group

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Blocker
    • Resolution: Fixed
    • 1.7.0, 1.7.1, 1.7.2, 1.7.3, 1.7.4
    • 1.7.5
    • C++
    • None

    Description

      RowReaderImpl::seekToRow() depends on startNextStripe() to seek to the start of the next selected row group when PPD is enabled. However, it doesn't seek inside the selected row group. In the case when the target rowNumber is not the first row of the row group, the seeked position is incorrect.

      Related codes:
      https://github.com/apache/orc/blob/v1.7.4/c%2B%2B/src/Reader.cc#L351
      https://github.com/apache/orc/blob/v1.7.4/c%2B%2B/src/Reader.cc#L1045

      We should either do the remaining seek in seekToRow() or startNextStripe().

       

      Attachments

        Issue Links

          Activity

            People

              stigahuang Quanlong Huang
              stigahuang Quanlong Huang
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: