ORC-1160: [C++] Fix seekToRow can't seek within selected row group